; ModuleID = '/home/carl/AnghaBench/dsvpn/src/extr_charm.c_uc_state_init.c'
source_filename = "/home/carl/AnghaBench/dsvpn/src/extr_charm.c_uc_state_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uc_state_init(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 0
  %9 = load i8*, i8** %6, align 8
  %10 = call i32 @memcpy(i32* %8, i8* %9, i32 16)
  %11 = load i32*, i32** %4, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 4
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @memcpy(i32* %12, i8* %13, i32 32)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @endian_swap_all(i32* %15)
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @permute(i32* %17)
  ret void
}

declare dso_local i32 @memcpy(i32*, i8*, i32) #1

declare dso_local i32 @endian_swap_all(i32*) #1

declare dso_local i32 @permute(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
